<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.upc.eetac.dsa.eventsbcn.Activitys.RegisterUserActivity"
    tools:showIn="@layout/activity_register_user">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dip"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:id="@+id/Username"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/nombre"
            android:inputType="text" />



        <EditText
            android:id="@+id/Email"
            android:layout_marginTop="15dip"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Pass"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="30dip" />

        <TextView
            android:id="@+id/tittle_categories"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/title_categories"/>



        <CheckBox android:id="@+id/checkbox_cine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cine" />

        <CheckBox android:id="@+id/checkbox_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar" />

        <CheckBox android:id="@+id/checkbox_teatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teatro" />

        <CheckBox android:id="@+id/checkbox_discoteca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discoteca" />



        <Button
            android:id="@+id/btnRegister"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/registrarse"
            android:onClick="registro"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btn_Cancel"
            android:onClick="cancel"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>
    </ScrollView>


</RelativeLayout>
