<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.upc.eetac.dsa.eventsbcn.Activitys.CapturaFotoActivity"
    tools:showIn="@layout/activity_captura_foto">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOTO"
            android:layout_margin="3dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="295dp"
            android:contentDescription="@string/picture"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_weight="0.54" />

        <Button
            android:id="@+id/capturarfoto"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/capture"
            android:layout_gravity="center_horizontal"
            android:paddingTop="0dip" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/EnviarFoto"
            android:id="@+id/enviarfoto"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
