<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.upc.eetac.dsa.eventsbcn.Activitys.CreateEventActivity"
    tools:showIn="@layout/activity_create_event">

    <ProgressBar android:id="@+id/createvent_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginBottom="8dp" android:visibility="gone"  />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/form_createevent">



        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dip"
        android:orientation="vertical">



    <EditText
        android:id="@+id/Event_name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/createevent_name"
        android:inputType="text" />



    <EditText
        android:id="@+id/Event_description"
        android:layout_marginTop="15dip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/createevent_description"
        android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:text="Elije Categoria"/>



        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:id="@+id/rgcat">

        <RadioButton
            android:id="@+id/radio_cine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="cine" />
        <RadioButton
            android:id="@+id/radio_teatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="teatro" />
        <RadioButton
            android:id="@+id/radio_disco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="discoteca" />
        <RadioButton
            android:id="@+id/radio_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="bar" />


        </RadioGroup>


        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <EditText android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/txtDate">

            </EditText>
            <Button android:layout_height="wrap_content"
                android:layout_weight="0" android:id="@+id/btnCalendar" android:text="FECHA"
                android:layout_width="100dp"></Button>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/txtTime">

            </EditText>
            <Button android:layout_height="wrap_content"
                android:layout_weight="0" android:id="@+id/btnTimePicker"
                android:text="HORA" android:layout_width="100dp"></Button>
        </LinearLayout>
        <Button
            android:id="@+id/btnphotoevent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/select_photo"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/crearEvento"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
